# company-and-conquer

./: .gitignore  CMakeLists.txt  README.md  flake.nix
libs/SFMLButton/: CMakeLists.txt
libs/SFMLButton/include/: Button.hpp  EllipseButton.hpp  RectButton.hpp  sfmlbutton.hpp
libs/SFMLButton/src/: Button.cpp  EllipseButton.cpp  RectButton.cpp
libs/tinyfiledialogs/: CMakeLists.txt
scenarios/: scenario.yaml  scenario1.yaml  scenario2.yaml  scenario3.yaml
scenarios/maps/: map.txt  map_1.txt  map_15.txt  map_2.txt
src/: CMakeLists.txt  CmakeLists.txt  gui.cpp
src/backend/: CMakeLists.txt  action.cpp  action.hpp  building.cpp  building.hpp  building_part_type.hpp  const_items.hpp  const_terrains.hpp  coordinates.hpp  enemy_ai.cpp  enemy_ai.hpp  game.cpp  game.hpp  helper_tools.hpp  item.cpp  item.hpp  map.cpp  map.hpp  map_builder.hpp  matrix.hpp  name_gen.cpp  name_gen.hpp  render_map.cpp  render_map.hpp  render_window.cpp  render_window.hpp  scenario.cpp  scenario.hpp  scenario_loader.cpp  scenario_loader.hpp  shop.cpp  shop.hpp  square.hpp  team.cpp  team.hpp  terrain.hpp  texture_idx.hpp  tile_map.cpp  tile_map.hpp  timer.hpp  (+3 more)
src/frontend/: CMakeLists.txt  GUI.cpp  GUI.hpp  Render_Map.hpp  auxiliary_renderable.hpp  game_logs.hpp  game_manager.cpp  game_manager.hpp  inventory_ui.cpp  inventory_ui.hpp  main_screen.cpp  main_screen.hpp  render_aux.cpp  render_aux.hpp  render_buildings.cpp  render_buildings.hpp  render_map.cpp  render_map.hpp  render_units.cpp  render_units.hpp  renderer.cpp  renderer.hpp  rendering_engine.cpp  rendering_engine.hpp  shop_ui.cpp  shop_ui.hpp  tile_map.cpp  tile_map.hpp  window_to_render.cpp  window_to_render.hpp
tests/: CMakeLists.txt  action_test.cpp  action_test.hpp  aoe_test.cpp  aoe_test.hpp  building_test.cpp  building_test.hpp  easter_egg_test.cpp  easter_egg_test.hpp  file_selector_test.cpp  file_selector_test.hpp  integration_test.cpp  integration_test.hpp  map_builder_test.cpp  map_builder_test.hpp  movement_test.cpp  movement_test.hpp  readme.md  render_map_test.cpp  render_map_test.hpp  render_window_test.cpp  render_window_test.hpp  scenario_test.cpp  scenario_test.hpp  shop_test.cpp  shop_test.hpp  shop_ui_test.cpp  shop_ui_test.hpp  test.cpp  test_map.txt  test_map1.txt  unit_test.cpp  unit_test.hpp  vision_test.cpp  vision_test.hpp
