file (GLOB FRONTEND_SOURCES_CPP "*.cpp")
file (GLOB FRONTEND_SOURCES_HPP "*.hpp")
file (GLOB FRONTEND_SOURCES_C "*.c")
file (GLOB FRONTEND_SOURCES_H "*.h")

set(FRONTEND_SOURCES ${FRONTEND_SOURCES_H} ${FRONTEND_SOURCES_C} ${FRONTEND_SOURCES_HPP} ${FRONTEND_SOURCES_CPP})

# target_sources(gui PRIVATE ${FRONTEND_SOURCES})
add_library(frontend STATIC ${FRONTEND_SOURCES})
